# celebi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
celebi/: CMakeLists.txt
celebi-cli/: CMakeLists.txt  cxxopts.hpp  main.cpp
celebi-tests/: CMakeLists.txt  catch.hpp  dbmanagement-tests.cpp  keyvalue-tests.cpp  performance-tests.cpp  query-tests.cpp  tests.h
celebi/include/: celebi.h  database.h  query.h
celebi/include/extensions/: extdatabase.h  extquery.h  highwayhash.h
celebi/src/: celebi.cpp  database.cpp  filekeyvaluestore.cpp  highwayhash.cpp  memorykeyvaluestore.cpp  query.cpp
